--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -102,15 +102,15 @@ jobs:
 
           # Look for that file's path in CODEOWNERS in a granular way
           # Assume this is a script that returns a not_in_codeowners ,-delmitied string
-          codeowners_thing=$(bash ./shell-scripts/read-thru-codeowners.sh)
-          echo "codeowners_thing $codeowners_thing"
+          # codeowners_thing=$(bash ./shell-scripts/read-thru-codeowners.sh)
+          # echo "codeowners_thing $codeowners_thing"
           
       - name: Test Get CODEOWNERS
         run: |
           url="repos/${REPO_PATH}/contents/.gitignore/CODEOWNERS"
           echo "url= ${url}"
           # gh api repos/${REPO_PATH}/contents/.gitignore/CODEOWNERS
-          
+          gh api repos/${REPO_PATH}/contents/.gitignore/CODEOWNERS | jq '.content' | base64 --decode 
           # Pass that string to next step which will... 
           # If not_in_codeowners != "" then loop thru the string and make a multiline coment
           echo "changed_files_array[1] = ${changed_files_array[1]}"
