test in action vs script >> test-pr-axn-2

--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -116,6 +116,23 @@ jobs:
           line=$(bash ./shell-scripts/read-thru-codeowners.sh)
           echo "line = ${line}"
           
+          mapfile -t codeowners_raw_lines < <(gh api repos/${REPO_PATH}/contents/.gitignore/CODEOWNERS | jq -r '.content' | base64 --decode )
+
+          # Get filepath (in PR), see if path is in 
+
+          # echo "codeowners_raw_lines[0] = ${codeowners_lines[0]}"
+          # echo "codeowners_raw_lines[1] = ${codeowners_lines[1]}"
+
+          # Filter out the comments in the array (essentially this is array mapping)
+          for line in "${codeowners_lines[@]}"
+          do
+              if [[ "${line}" != "#"* ]]
+              then
+                  echo "LINE! ${line}"
+                  codeowners_lines+=($line)
+              fi
+          done
+
           # If not_in_codeowners != "" then loop thru the string and make a multiline coment
           echo "changed_files_array[1] = ${changed_files_array[1]}"
           # printf "%s\\n" "${changed_files[@]}"
