Add clause if-line-not-empty >> test-pr-axn-2

--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -126,7 +126,7 @@ jobs:
           # Filter out the comments in the array (essentially this is array mapping)
           for line in "${codeowners_raw_lines[@]}"
           do
-              if [[ "${line}" != "#"* ]]
+              if [[ "${line}" != "#"* && "${line}" -gt 0 ]]
               then
                   echo "LINE! ${line}"
                   codeowners_lines+=($line)
