better if syntax >> test-pr-axn-2
Reads better (i.e. if line isn't empty, (then) AND line doesn't begin with..)

--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -127,7 +127,7 @@ jobs:
           # Filter out lines that begin with # or are empty (use ${#line} to assess string length)
           for line in "${codeowners_raw_lines[@]}"
           do
-              if [[ "${line}" != "#"* || ${#line} -gt 0 ]]
+              if [[ ${#line} -gt 0 && "${line}" != "#"* ]]
               then
                   echo "LINE! ${line}"
                   codeowners_lines+=($line)
