--- a/.gitignore/CODEOWNERS
+++ b/.gitignore/CODEOWNERS
@@ -10,3 +10,6 @@
 
 # README is also owned by Peach's team
 README.md @org-mushroom-kingdom/team-peach
+
+# This purposefully has tabs in it to better test string splitting logic in read-thru-codeowners.sh
+/org/*      @org-mushroom-kingdom/team-luigi
