--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -113,7 +113,7 @@ jobs:
           # gh api repos/${REPO_PATH}/contents/.gitignore/CODEOWNERS | jq -r '.content' | base64 --decode 
           # Pass that string to next step which will... 
           
-          line=$(bash ./shell-scripts/read-thru-codeowners.sh)
+          # line=$(bash ./shell-scripts/read-thru-codeowners.sh)
           echo "line = ${line}"
           
           mapfile -t codeowners_raw_lines < <(gh api repos/${REPO_PATH}/contents/.gitignore/CODEOWNERS | jq -r '.content' | base64 --decode )
