--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -129,8 +129,8 @@ jobs:
           do
               if [[ ${#line} -gt 0 && "${line}" != "#"* ]]
               then
-                  trimmed_line=$(echo "$line" | tr -d '\t')
-                  echo "LINE! ${trimmed_line}"
+                  trimmed_line=$(echo "$line" | tr -s ' ')
+                  echo -e "LINE! ${trimmed_line}"
                   codeowners_lines+=($trimmed_line)
               fi
           done
