--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -135,8 +135,8 @@ jobs:
               fi
           done
 
-          echo "codeowners_lines:"
-          printf "\\n" "${codeowners_lines[@]}"
+          # echo "codeowners_lines:"
+          # printf "\\n" "${codeowners_lines[@]}"
           
           for line in "${codeowners_lines[@]}"
           do
