--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -89,10 +89,10 @@ jobs:
           changed_files_str="${changed_files[*]}"
           echo "changed_files_str = ${changed_files_str}"
           echo "CHANGED_FILES_STR=${changed_files_str}" >> $GITHUB_ENV
-          # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
       
       - name: changed files str --> Array
         run: |
+          echo "Note: This step might go away at some point"
           echo "Attempt to print env.CHANGED_FILES_STR..."
           echo "${{env.CHANGED_FILES_STR}}"
           changed_files_str="${{env.CHANGED_FILES_STR}}"
