get line, tmp purpose fail >> test-pr-axn-2

--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -113,9 +113,12 @@ jobs:
           # gh api repos/${REPO_PATH}/contents/.gitignore/CODEOWNERS | jq -r '.content' | base64 --decode 
           # Pass that string to next step which will... 
           
-          # line=$(bash ./shell-scripts/read-thru-codeowners.sh)
+          line=$(bash ./shell-scripts/read-thru-codeowners.sh)
           echo "line = ${line}"
           
+          # DELETE THIS WHEN TESTING COMPLETE
+          echo "Purpose fail"
+          exit 1
           mapfile -t codeowners_raw_lines < <(gh api repos/${REPO_PATH}/contents/.gitignore/CODEOWNERS | jq -r '.content' | base64 --decode )
 
           # Get filepath (in PR), see if path is in 
