--- a/.gitignore/CODEOWNERS
+++ b/.gitignore/CODEOWNERS
@@ -23,7 +23,7 @@ images/ @org-mushroom-kingdom/team-toad
 # Luigi's team owns everything in org/ and its subdirectories (example of recursively owning all files/folders in a directory)
 /org/      @org-mushroom-kingdom/team-luigi
 
-# Anything in shell-scripts/ (NOT subdirectories) that is a *.sh file is owned by Mario's team (example of owning certain exts in a directory, nonrecursively)
+# Anything in shell-scripts/ (NOT subdirectories) that is a *.sh file is owned by Mario's team (example of owning certain files/exts in a directory, nonrecursively)
 /shell-scripts/*.sh @org-mushroom-kingdom/team-mario
 
 # However, Peach's team should own the documentation for it (example of owning specific file)
@@ -36,17 +36,23 @@ images/ @org-mushroom-kingdom/team-toad
 /sandbox/other/sub1/sub2/ @org-mushroom-kingdom/team-luigi
 
 
-# Mario's team owns everything in sub_a, but NOT any of its subdirectories (e.g. sub_b) (example of NOT recursively owning all files/folders in a director )
+# Mario's team owns everything in sub_a, but NOT any of its subdirectories (e.g. sub_b) (example of owning all files/folders in a directory0, NOT recursively )
 /sandbox/other/sub_a/* @org-mushroom-kingdom/team-mario
 
 #TODO: Elaborate on extensionless vs example/ 
 # /sandbox/other/sub_a/sub_b/sub_c @org-mushroom-kingdom/team-mario
 
-# Peach's team owns any csv file whose name begins with 'peachList' (example of prefix matching)
+# TODO: Make peachList*.csv files
+# Peach's team owns any csv file whose name begins with 'peachList' (example of owning files/exts with prefix matching)
 /sandbox/other/sub_a/sub_b/peachList*.csv @org-mushroom-kingdom/team-peach
 
-# Mario's team owns any csv file whose name ends with 'marioOnly' (example of suffix matching)
-/sandbox/other/sub_a/sub_b/*marioOnly.csv @org-mushroom-kingdom/team-luigi
+# TODO: Make *marioOnly.csv files
+# Mario's team owns any csv file whose name ends with 'marioOnly' (example of owning files/exts with suffix matching)
+/sandbox/other/sub_a/sub_b/*marioOnly.csv @org-mushroom-kingdom/team-mario
 
-# Luigi's team owns the Jenkinsfile (an extensionless file)
+# TODO: Make toad csvs
+# Toad's team owns files that begin with 'onlyToad' and end with 'toadOnly', with whatever in the middle.
+/sandbox/other/sub_a/sub_b/onlyToad*toadOnly.csv @org-mushroom-kingdom/team-toad
+
+# Luigi's team owns the Jenkinsfile (example of owning an extensionless file)
 /sandbox/other/sub_a/sub_b/Jenkinsfile @org-mushroom-kingdom/team-luigi
