Try **/filename easy exit
As in, if something like **/README.md is a line in CODEOWNERS, AND the changed_filepath is something like f1/f2/f3/README.md, then we can safely early exit

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -74,3 +74,6 @@ test-json-output.txt @org-mushroom-kingdom/team-peach
 # ex. team-luigi owns everything directly in sandbox/other (/sandbox/other/*), IMagine this has a README.md file. 
 # If this line were above that line, Luigi's team would own README.md, which is undesirable.
 **/README.md @org-mushroom-kingdom/team-peach
+
+# There ISN'T an owner here on purpose
+/sandbox/not-in-codeowners/
